--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>LiveCountsEdit Compare</title>
 </head>
 <body>
-    idjdu
+    <div id="chan1" class="chan">
+        <p>Channel 1</p>
+        
+    </div>
 </body>
 </html>
